# DJ-App

./: CMakeLists.txt  NewProject.jucer  README.md
Builds/MacOSX/DJ GUI_New.xcodeproj/project.xcworkspace/xcuserdata/yrish.xcuserdatad/: UserInterfaceState.xcuserstate
JuceLibraryCode/: JuceHeader.h
Source/: Main.cpp  VerticalGradientMeter.cpp
Source/Components/: JogWheel.cpp
Source/Controller/: DJController.cpp
Source/Model/: Track.h
Source/View/: DeckView.cpp  DeckView.h  MainView.cpp  PlaylistView.cpp  PlaylistView.h
